toy_k8s/grafana/grafana-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - grafana-gateway
  http:
    - match:
        - uri:
            prefix: /grafana
      route:
        - destination:
            host: grafana.istio-system.svc.cluster.local
            port:
              number: 3000
